cabal-version:      3.0

name:               pool-allocator
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Александр Смоликов
maintainer:         aleksandrsmolikov107@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import: warnings

    exposed-modules: PoolAllocator
    hs-source-dirs: src/main

    build-depends:
        base ^>=4.18.3.0,
        clash-prelude

    default-language: Haskell2010

    default-extensions:
        DataKinds,
        DeriveAnyClass,
        DeriveGeneric,
        TypeApplications,
        TypeOperators

test-suite allocators-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   src/test/
    main-is:          PoolAllocatorTests.hs
    build-depends:
        base ^>=4.18.3.0,
        pool-allocator, 
        hspec,
        clash-prelude
